fixing top white spaces

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body {
 .first_page_body {
 	width: 55%;
 	margin: auto;
-	padding-top: 55px;
+	padding-top: 65px;
 }
 
 /*################   SECOND SUB   ####################*/
